--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -19,11 +19,14 @@
 	  <li><a href="/admin">Administration</a></li>
 	  {{end}}
     </ul>
-    <form class="navbar-form navbar-left" role="search">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default">Suchen</button>
+    <form class="navbar-form navbar-left" role="search" action="/search">
+		<div class="input-group">
+	      <input type="text" class="form-control" placeholder="Search" name="query">
+	      <span class="input-group-btn">
+			<button type="submit" class="btn btn-default">Suchen</button>
+	      </span>
+	    </div>
+      
     </form>
 	
 	{{if not .user}}
