--- a/app/views/Admin/Index.html
+++ b/app/views/Admin/Index.html
@@ -25,7 +25,7 @@
 					<td>{{if not .Published}}Not {{end}}Published</td>
 					<td>{{.CreatedTime}}</td>
 					<td>{{.UpdatedTime}}</td>
-					<td><a href="/admin/post/edit/{{.PostId}}">Edit</a></td>
+					<td><a href="/admin/post/{{.PostId}}">Edit</a></td>
 				</tr>
 			{{end}}
 		   </tbody>
