--- a/app/views/Admin/adminMenu.html
+++ b/app/views/Admin/adminMenu.html
@@ -1,5 +1,7 @@
 <ul class="nav nav-pills nav-stacked">
   <li class="active"><a href="/admin"><span class="glyphicon glyphicon-home"></span> Home</a></li>
   <li><a href="/admin/post/create"><span class="glyphicon glyphicon-plus"></span> Create Post</a></li>
-  <li><a href="/admin/user/create"><span class="glyphicon glyphicon-user"></span> Create User</a></li>
+  {{if .user.Admin}}
+  	<li><a href="/admin/user/create"><span class="glyphicon glyphicon-user"></span> Create User</a></li>
+  {{end}}
 </ul>
