--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -19,34 +19,15 @@
 	  <li><a href="/admin">Administration</a></li>
 	  {{end}}
     </ul>
-    <form class="navbar-form navbar-left" role="search" action="/search">
+    <form class="navbar-form navbar-right" role="search" action="/search">
 		<div class="input-group">
-	      <input type="text" class="form-control" placeholder="Search" name="query">
+	      <input type="text" class="form-control" placeholder="Search" name="query" value="{{.query}}">
 	      <span class="input-group-btn">
 			<button type="submit" class="btn btn-default">Suchen</button>
 	      </span>
 	    </div>
       
     </form>
-	
-	{{if not .user}}
-		<form class="navbar-form navbar-right" action="/login" method="POST">
-		  <div class="form-group">
-	        <input type="text" class="form-control" name="username" placeholder="Username">
-		  </div>
-	      <div class="form-group">
-	        <input type="password" class="form-control" name="password" placeholder="Password">
-	      </div>
-	      <button type="submit" class="btn btn-info">Login</button>
-	    </form>
-	{{else}}
-		<form class="navbar-form navbar-right" action="/logout" method="POST">
-			<div class="form-group">
-				Logged in as <a href="/admin/user/{{.user.Username}}">{{.user.Name}}</a>
-				<button type="submit" class="btn btn-info">Logout</button>
-			</div>
-		</form>
-	{{end}} 
 
   </div><!-- /.navbar-collapse -->
 </nav>
