--- a/app/views/debug.html
+++ b/app/views/debug.html
@@ -41,7 +41,7 @@
 	{{end}}
 	</dl>
 </div>
-<a id="toggleSidebar" href="#" class="toggles"><i class="icon-chevron-left"></i></a>
+<a id="toggleSidebar" href="#" class="toggles"><span class="glyphicon glyphicon-arrow-left"></span></a>
 
 <script>
 	$sidebar = 0;
