--- a/app/views/Admin/EditPost.html
+++ b/app/views/Admin/EditPost.html
@@ -1,4 +1,16 @@
-{{set . "title" "Home"}}
+{{if eq .post.PostId -1}}
+{{set . "title" "Create a new Post"}}
+{{else}}
+{{set . "title" "Edit Post"}}
+{{end}}
+
+{{append . "moreStyles" "Markdown.Editor.css"}}
+{{append . "moreScripts" "Markdown.Converter.js"}}
+{{append . "moreScripts" "Markdown.Sanitizer.js"}}
+{{append . "moreScripts" "Markdown.Editor.js"}}
+{{append . "moreStyles" "highlight.css"}}
+{{append . "moreScripts" "highlight.js"}}
+
 {{template "header.html" .}}
 
 
@@ -7,15 +19,10 @@
 		{{template "Admin/adminMenu.html" .}}
 	</div>
 	<div class="col-sm-5">
-		<form role="form" method="POST" action="/admin/post/save">
+		<form role="form" method="POST" action="/admin/post/{{.post.PostId}}">
 			<div class="form-group">
-				<label for="inputPostTitle">Post Titel</label>
+				<label for="inputPostTitle">Post Title</label>
 				<input type="text" class="form-control" id="inputPostTitle" name="title" placeholder="Titel" value="{{.post.Title}}">
-			</div>
-			<div class="checkbox">
-				<label>
-					<input type="checkbox" name="published" value="true" {{if .post.Published}}checked{{end}}> Published
-				</label>
 			</div>
 			<div class="form-group">
 				<label for="wmd-input">Content</label>
@@ -23,6 +30,20 @@
             		<div id="wmd-button-bar"></div>
 					<textarea class="form-control" rows="20" id="wmd-input" name="body">{{.post.Body}}</textarea>
 				</div>
+			</div>
+			<div class="checkbox">
+				<label>
+					<input type="checkbox" name="published" value="true" {{if .post.Published}}checked{{end}}> Published (publicly visible)
+				</label>
+			</div>
+			<div class="checkbox">
+				<label>
+					<input type="checkbox" name="isPage" value="true" {{if .post.IsPage}}checked{{end}}> Is a Page that should appear in the menu
+				</label>
+			</div>
+			<div class="form-group">
+				<label for="inputPostPageOrder">Page Oder</label>
+				<input type="number" class="form-control" id="inputPostPageOrder" name="pageOrder" placeholder="0" value="{{.post.PageOrder}}">
 			</div>
 			<button type="submit" class="btn btn-default">Save</button>
 		</form>
@@ -32,12 +53,6 @@
 	</div>
 </div>
 
-<link rel="stylesheet" type="text/css" href="/public/css/Markdown.Editor.css">
-<script type="text/javascript" src="/public/js/Markdown.Converter.js"></script>
-<script type="text/javascript" src="/public/js/Markdown.Sanitizer.js"></script>
-<script type="text/javascript" src="/public/js/Markdown.Editor.js"></script>
-<link rel="stylesheet" type="text/css" href="/public/css/highlight.css">
-<script type="text/javascript" src="/public/js/highlight.js"></script>
 <script type="text/javascript">
 	$(function() {
 		var converter = Markdown.getSanitizingConverter();
