--- a/app/views/Admin/Index.html
+++ b/app/views/Admin/Index.html
@@ -12,7 +12,6 @@
 				<th>#ID</th>
 				<th>Title</th>
 				<th>Status</th>
-				<th>Creation Date</th>
 				<th>Last Update Date</th>
 				<th>Actions</th>
 		       </tr>
@@ -23,9 +22,11 @@
 					<td>{{.PostId}}</td>
 					<td>{{.Title}}</td>
 					<td>{{if not .Published}}Not {{end}}Published</td>
-					<td>{{.CreatedTime}}</td>
 					<td>{{.UpdatedTime}}</td>
-					<td><a href="/admin/post/{{.PostId}}">Edit</a></td>
+					<td>
+						<a href="/admin/post/{{.PostId}}">Edit</a>
+						<a href="/admin/post/delete/{{.PostId}}">Delete</a>
+					</td>
 				</tr>
 			{{end}}
 		   </tbody>
