--- a/app/views/App/Search.html
+++ b/app/views/App/Search.html
@@ -12,6 +12,17 @@
 </div>
 {{end}}
 
+<ul class="pagination">
+  <li><a href="#">&laquo;</a></li>
+  <li><a href="#">1</a></li>
+  <li><a href="#">2</a></li>
+  <li><a href="#">3</a></li>
+  <li><a href="#">4</a></li>
+  <li><a href="#">5</a></li>
+  <li><a href="#">&raquo;</a></li>
+</ul>
+
+
 {{if not .posts}}
 <h2>Oops!</h2>
 <p>It seems that there are no results here</p>
