--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -27,6 +27,7 @@
 				</form>
 			{{end}} 
 			</div>
+			<em>Copyright 2013 Simon Peter Grätzer</em>
 		</footer>
 		
 		</div><!-- /.container -->
