--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -19,14 +19,14 @@
 	  {{end}}
 	      
 	  {{if .user}}
-	  <li><a href="/admin">Administration</a></li>
+	  <li><a href="/admin">Admin Panel</a></li>
 	  {{end}}
     </ul>
 	<form class="navbar-form navbar-right" role="search" action="/search">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Search" name="query" value="{{.query}}">
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-default">Search</button>
     </form>
 
   </div><!-- /.navbar-collapse -->
