--- a/app/views/Admin/Index.html
+++ b/app/views/Admin/Index.html
@@ -3,9 +3,10 @@
 
 <div class="row">
 	<div class="col-sm-2" style="min-width:160px">
+		{{ set . "pp" 0}}
 		{{template "Admin/adminMenu.html" .}}
 	</div>
-	<div class="col-sm-8">
+	<div class="col-sm-10">
 	    <h3>Posts</h3>
 		<table class="table table-hover">
 		   <thead>
