--- a/app/views/Admin/EditPost.html
+++ b/app/views/Admin/EditPost.html
@@ -18,6 +18,7 @@
 
 <div class="row">
 	<div class="col-sm-2" style="min-width:160px">
+		{{ set . "pp" 1}}
 		{{template "Admin/adminMenu.html" .}}
 	</div>
 	<div class="col-sm-5">
