--- a/app/views/Admin/Upload.html
+++ b/app/views/Admin/Upload.html
@@ -4,27 +4,40 @@
 
 <div class="row">
 	<div class="col-sm-2" style="min-width:160px">
+		{{ set . "pp" 2}}
 		{{template "Admin/adminMenu.html" .}}
 	</div>
-	<div class="col-sm-8">
-	    <h3>Uploads</h3>
-		<form action="/admin/upload/save" class="dropzone" id="formUpload" method="POST" enctype="multipart/form-data">
+	<div class="col-sm-10">
+	    <h3>Upload Zone</h3>
+		<form action="/admin/uploads/save" class="dropzone" id="formUpload" method="POST" enctype="multipart/form-data">
 			<div class="fallback">
     			<input name="file" type="file" multiple />
 				<button type="submit" class="btn btn-default">Save</button>
   			</div>
 		</form>
 		
-		<h3>Already uploaded</h3>
-		<div class="list-group">
-		  {{range .files}}
-		  <a href="/public/uploads/{{urlquery .Name}}" class="list-group-item">
-		    {{.Name}}
-			
-			<span class="badge">{{.Size}} Bytes</span>
-		  </a>
-		  {{end}}
-		</div>
+		<h3>Uploaded Media</h3>
+		<table class="table table-bordered">
+		    <thead>
+				<tr>
+				    <th>Name</th>
+				    <th>Size</th>
+				    <th>Action</th>				
+				</tr>
+			</thead>
+		    <tbody>
+				{{range .files}}
+				<tr>
+		            <td>{{.Name}}</td>
+					<td>{{.Size}} Bytes</td>
+					<td>
+						<a title="Delete this file" href="/public/uploads/{{urlquery .Name}}">View</a>
+						<a title="Delete this file" href="/admin/uploads/delete/{{urlquery .Name}}">Delete</a>
+					</td>
+				</tr>
+				{{end}}
+		    </tbody>
+		</table>
 	</div>
 </div>
 
