--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -22,6 +22,7 @@
 	  </div>
 	  <div class="panel-body">
 	    {{markdown .Body}}
+		<a href="/post/{{.PostId}}/{{urlquery .Title}}#commentForm" title="Make a comment">Comment on this post</a>
 	  </div>
 	</div>
 </article>
