--- a/app/views/App/Search.html
+++ b/app/views/App/Search.html
@@ -1,40 +1,41 @@
 {{set . "title" "Home"}}
 {{template "header.html" .}}
+{{template "App/trailer.html" .}}
 
-<header>
-<div class="jumbotron" id="trailer">
-   <h1>Technical Stuff</h1>
-   <p class="lead">Stuff on iOS, Android, GoLang and more.</p>
-</div>
-</header>
-
-{{range .posts}}
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">{{.Title}}</h3>
-  </div>
-  <div class="panel-body">
-    {{markdown .Body}}
-  </div>
-</div>
-{{end}}
-
-<ul class="pagination">
-  <li><a href="#">&laquo;</a></li>
-  <li><a href="?query={{urlquery .query}}&offset=10">1</a></li>
-  <li><a href="?query={{urlquery .query}}&offset=20">2</a></li>
-  <li><a href="?query={{urlquery .query}}&offset=30">3</a></li>
-  <li><a href="?query={{urlquery .query}}&offset=40">4</a></li>
-  <li><a href="#">&raquo;</a></li>
-</ul>
-
-
-{{if not .posts}}
-<h2>Oops!</h2>
-<p>It seems that there are no results here</p>
-{{end}}
-
-
+<div class="row">
+	<div class="col-sm-10">
+	
+	{{range .posts}}
+	<div class="panel panel-default">
+	  <div class="panel-heading">
+	    <h3 class="panel-title">{{.Title}}</h3>
+	  </div>
+	  <div class="panel-body">
+	    {{markdown .Body}}
+	  </div>
+	</div>
+	{{end}}
+	
+	{{if not .posts}}
+		<h2>Oops!</h2>
+		<p>It seems that there are no results for '{{.query}}' here</p>
+	{{else}}
+		{{$uq := urlquery .query}}
+		<ul class="pagination">
+		  <li class="disabled"><a href="#">&laquo;</a></li>
+		  <li {{if eq .offset 0}}class="active"{{end}}><a href="?query={{$uq}}&offset=0">1</a></li>
+		  <li {{if eq .offset 10}}class="active"{{end}}><a href="?query={{$uq}}&offset=10">2</a></li>
+		  <li {{if eq .offset 20}}class="active"{{end}}><a href="?query={{$uq}}&offset=20">3</a></li>
+		  <li {{if eq .offset 30}}class="active"{{end}}><a href="?query={{$uq}}&offset=30">4</a></li>
+		  <li><a href="#">&raquo;</a></li>
+		</ul>
+	{{end}}
+	
+	</div>
+	<div class="col-sm-2">
+	{{template "App/social.html" .}}
+	</div>
+</div><!-- /.row -->
 
 <link rel="stylesheet" type="text/css" href="/public/css/highlight.css">
 <script type="text/javascript" src="/public/js/highlight.js"></script>
