--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,6 +1,4 @@
-		
-		{{template "flash.html" .}}
-		
+
 		<footer>
 			<div class="pull-right">
 			{{if not .user}}
@@ -27,7 +25,9 @@
 				</form>
 			{{end}} 
 			</div>
+			
 			<em>Copyright 2013 Simon Peter Grätzer</em>
+			<em>Impressum</em>
 		</footer>
 		
 		</div><!-- /.container -->
