--- a/app/views/Admin/EditUser.html
+++ b/app/views/Admin/EditUser.html
@@ -13,6 +13,11 @@
 		{{template "Admin/adminMenu.html" .}}
 	</div>
 	<div class="col-sm-5">
+		<ol class="breadcrumb">
+		  <li><a href="/admin">Admin Panel</a></li>
+		  <li class="active">{{.title}}</li>
+		</ol>
+	
 		<h3>User Profile</h3>
 		<form role="form" method="POST" action="/admin/user/save">
 			<div class="form-group">
