--- a/app/views/Admin/Index.html
+++ b/app/views/Admin/Index.html
@@ -1,12 +1,17 @@
 {{set . "title" "Admin Panel"}}
 {{template "header.html" .}}
 
+
 <div class="row">
 	<div class="col-sm-2" style="min-width:160px">
 		{{ set . "pp" 0}}
 		{{template "Admin/adminMenu.html" .}}
 	</div>
 	<div class="col-sm-10">
+		<ol class="breadcrumb">
+		  <li class="active">Admin Panel</li>
+		</ol>
+
 	    <h3>Posts</h3>
 		<table class="table table-hover">
 		   <thead>
