--- a/app/views/App/social.html
+++ b/app/views/App/social.html
@@ -1,7 +1,7 @@
 <h4>Social Networks</h4>
 <div class="list-group">
-  <a href="#" class="list-group-item">Github</a>
-  <a href="#" class="list-group-item">Twitter</a>
-  <a href="#" class="list-group-item">Facebook</a>
-  <a href="#" class="list-group-item">Google +</a>
+  <a href="https://github.com/graetzer/" class="list-group-item">Github</a>
+  <a href="https://twitter.com/ciron" class="list-group-item">Twitter</a>
+  <a href="https://www.facebook.com/simon.graetzer" class="list-group-item">Facebook</a>
+  <a href="https://plus.google.com/u/0/110906422094202892447" class="list-group-item">Google +</a>
 </div>
