--- a/app/views/App/social.html
+++ b/app/views/App/social.html
@@ -1,7 +1,9 @@
-<h4>Social Networks</h4>
-<div class="list-group">
-  <a href="https://github.com/graetzer/" class="list-group-item">Github</a>
-  <a href="https://twitter.com/ciron" class="list-group-item">Twitter</a>
-  <a href="https://www.facebook.com/simon.graetzer" class="list-group-item">Facebook</a>
-  <a href="https://plus.google.com/u/0/110906422094202892447" class="list-group-item">Google +</a>
-</div>
+<aside>
+<h5>Social</h5>
+
+<ul class="social-list">
+  <li><a href="https://github.com/graetzer/" class="github" title="Simon Grätzer Github profile"></a></li>
+  <li><a href="https://twitter.com/ciron" class="twitter"></a></li>
+  <li><a href="https://www.facebook.com/simon.graetzer" class="facebook"></a></li>
+  <li><a href="https://plus.google.com/110906422094202892447" class="googleplus"></a></li>
+</ul>
