--- a/app/views/header.html
+++ b/app/views/header.html
@@ -5,9 +5,11 @@
     <title>{{.title}}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Simon Peter Grätzer">
+	
 	<link rel="shortcut icon" type="image/png" href="/public/img/favicon.png">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/public/css/my.css">
+	<link rel="stylesheet" type="text/css" href="/public/css/custom.css">
     {{range .moreStyles}}<link rel="stylesheet" type="text/css" href="{{.}}">{{end}}
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
