--- a/app/views/flash.html
+++ b/app/views/flash.html
@@ -9,10 +9,10 @@
 	{{if .flash.error}}
 		{{.flash.error}}
 	{{end}}
-	<ul style="margin-top:10px;">
+	{{/*<ul style="margin-top:10px;">
 		{{range .errors}}
 			<li>{{.}}</li>
 		{{end}}
-	</ul>
+	</ul>*/}}
 </div>
 {{end}}
