--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,8 +5,8 @@ body {
 }
 
 #trailer {
-	background:url('../img/trailer.jpg') no-repeat;
-	background-size: 100% auto;
+	background:url('../img/trailer.png') no-repeat;
+	background-size: auto 100%;
 }
 
 footer {
